--- a/build.gradle
+++ b/build.gradle
@@ -36,25 +36,41 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'com.google.auth:google-auth-library-oauth2-http:1.20.0' // 최신 버전 사용
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.14.0' // 최신 버전 사용
     implementation 'com.google.api-client:google-api-client:1.32.2'
     implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
 
-    implementation 'com.google.auth:google-auth-library-credentials:1.20.0'  // 추가
+    implementation 'com.google.auth:google-auth-library-credentials:1.20.0'
 
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 
     implementation 'com.google.apis:google-api-services-indexing:v3-rev20200804-1.32.1'
 
-    implementation 'com.google.api-client:google-api-client:1.32.2'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
-    implementation 'com.google.oauth-client:google-oauth-client:1.32.1'
-    implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
 
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'com.google.firebase:firebase-admin:8.0.0'
-    implementation 'jakarta.mail:jakarta.mail-api:2.0.0'
-    implementation 'com.sun.mail:jakarta.mail:1.6.5'
+    implementation 'jakarta.mail:jakarta.mail-api:2.0.1' // 최신 버전 사용
+    implementation 'com.sun.mail:jakarta.mail:1.6.7' // 최신 버전 사용
+
+    implementation 'com.google.cloud:spring-cloud-gcp-starter-firestore:3.3.0'
+
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'io.projectreactor:reactor-core'
+    testImplementation 'io.projectreactor:reactor-test'
+    compileOnly 'org.projectlombok:lombok'
+
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2020.0.3"
+    }
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-Xlint:deprecation"
 }
 
 tasks.named('test') {
