--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,11 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // if using jackson for JSON processing
+
 }
 
 dependencyManagement {
