--- a/build.gradle
+++ b/build.gradle
@@ -21,58 +21,41 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'com.h2database:h2'
     implementation 'com.google.firebase:firebase-admin:9.2.0'
     implementation 'com.google.cloud:google-cloud-firestore:3.15.4'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+
+    implementation 'jakarta.mail:jakarta.mail-api:2.0.1'
+    implementation 'jakarta.activation:jakarta.activation-api:2.0.1'
+    implementation 'com.sun.mail:jakarta.mail:2.0.1'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.14.0'
+    implementation 'com.google.api-client:google-api-client:1.32.2'
+    implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
+    implementation 'com.google.auth:google-auth-library-credentials:1.20.0'
+    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+    implementation 'com.google.apis:google-api-services-indexing:v3-rev20200804-1.32.1'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
+    implementation 'com.google.cloud:spring-cloud-gcp-starter-firestore:3.4.0'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'io.projectreactor:reactor-core'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'io.projectreactor:reactor-test'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'com.google.auth:google-auth-library-oauth2-http:1.14.0' // 최신 버전 사용
-    implementation 'com.google.api-client:google-api-client:1.32.2'
-    implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
-
-    implementation 'com.google.auth:google-auth-library-credentials:1.20.0'
-
-    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
-
-    implementation 'com.google.apis:google-api-services-indexing:v3-rev20200804-1.32.1'
-
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
-
-    implementation 'org.springframework.boot:spring-boot-starter-mail'
-    implementation 'jakarta.mail:jakarta.mail-api:2.0.1' // 최신 버전 사용
-    implementation 'com.sun.mail:jakarta.mail:1.6.7' // 최신 버전 사용
-
-    implementation 'com.google.cloud:spring-cloud-gcp-starter-firestore:3.4.0'
-
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'io.projectreactor:reactor-core'
-    testImplementation 'io.projectreactor:reactor-test'
-    compileOnly 'org.projectlombok:lombok'
-
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
-
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // if using jackson for JSON processing
-
-    // JWT
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-    implementation 'javax.servlet:javax.servlet-api:4.0.1'
-
-    implementation 'javax.xml.bind:jaxb-api:2.3.1'
-    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
-
 }
 
 dependencyManagement {
