--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,8 @@ group = 'hanium'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '17'
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
 }
 
 repositories {
