--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'io.projectreactor:reactor-core'
 
+    // Google OAuth2 dependencies
+    implementation 'com.google.auth:google-auth-library-oauth2-http:1.14.0'
+    implementation 'com.google.api-client:google-api-client:1.32.2'
+    implementation 'com.google.http-client:google-http-client-jackson2:1.40.1'
+    implementation 'com.google.auth:google-auth-library-credentials:1.20.0'
+    implementation 'com.google.apis:google-api-services-indexing:v3-rev20200804-1.32.1'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
+
     // Firebase and Google Cloud (commented out)
         // implementation 'com.google.firebase:firebase-admin:9.2.0'
         // implementation 'com.google.cloud:google-cloud-firestore:3.15.4'
