--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     implementation 'com.google.apis:google-api-services-indexing:v3-rev20200804-1.32.1'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
 
+    // swagger
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+
     // Firebase and Google Cloud (commented out)
         // implementation 'com.google.firebase:firebase-admin:9.2.0'
         // implementation 'com.google.cloud:google-cloud-firestore:3.15.4'
