--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,9 @@ dependencies {
     // swagger
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
+//    //kakao
+//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
     // Firebase and Google Cloud (commented out)
         // implementation 'com.google.firebase:firebase-admin:9.2.0'
         // implementation 'com.google.cloud:google-cloud-firestore:3.15.4'
